# monitoring-mixins

./: .pre-commit-config.yaml  LICENSE  Makefile  README.md  poetry.toml  pyproject.toml
.github/: labels.yaml  release-drafter.yml  renovate.json5  settings.yml  stale.yml
.github/workflows/: archive.yml  chart-release.yml  chart-test.yml  mixins-archive.yml  mixins-build.yml  mixins-generate.yml  mixins-release.yml  mixins.yml  prow-labels.yml  prow-lgtm-merge.yml  prow-lgtm-pull.yml  prow.yml  rebase.yml  release-drafter.yml  renovate-mixin-generate.yml  renovate.yml  size.yml
deprecated/minio-mixin/: alerts.yaml  jsonnetfile.json  jsonnetfile.lock.json  rules.yaml
hack/: dashboards.py  linkerd.py  mixins.sh  versions.sh
hack/config/: licence.txt
incubator/etcd-mixin/: jsonnetfile.json  jsonnetfile.lock.json  mixin.libsonnet
mixins/alertmanager-mixin/: jsonnetfile.json  jsonnetfile.lock.json  mixin.libsonnet  mixin.tpl.libsonnet
mixins/alloy-mixin/: jsonnetfile.json  jsonnetfile.lock.json  mixin.libsonnet
mixins/apollo-server-mixin/: jsonnetfile.json  jsonnetfile.lock.json  mixin.libsonnet  mixin.tpl.libsonnet
mixins/cert-manager-mixin/: jsonnetfile.json  jsonnetfile.lock.json  mixin.libsonnet
mixins/cilium-mixin/: jsonnetfile.json  jsonnetfile.lock.json  mixin.libsonnet  mixin.tpl.libsonnet
mixins/clickhouse-mixin/: jsonnetfile.json  mixin.tpl.libsonnet
mixins/coredns-mixin/: jsonnetfile.json  jsonnetfile.lock.json  mixin.libsonnet  mixin.tpl.libsonnet
mixins/elasticsearch-mixin/: jsonnetfile.json  jsonnetfile.lock.json  mixin.libsonnet  (+1 more)
(+538 files in other folders)
