[tool.poetry]
name = "monitoring-mixins"
version = "0.1.0"
description = ""
authors = ["Nicolas Lamirault <nicolas.lamirault@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
coloredlogs = "^15.0"
black = "^23.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
